refactor: 修正syscall子命令解析方法